# scrapingDemo

./: .env.example  .gitignore  main.py  pyproject.toml
pokemon/: processing.py  sprites.py  visualization.py
pokemon/scrapers/: beautifulsoup.py  firecrawl.py
